# otus-basic-hw3

./: CMakeLists.txt  dockerfile  guess_the_number.cpp  guess_the_number.h
